--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+Nepali Date Converter
+=====================
 This is a simple program
- --> to convert english date to nepali and vice-versa
- --> to print calander of english and nepali
+ - to convert english date to nepali and vice-versa
+ - to print calander of english and nepali
